--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,42 @@
 {
     "cSpell.words": [
+        "ação",
+        "Aguardando",
         "andar",
         "casinhas",
         "conectado",
         "conectar",
         "connecteeeedd",
         "Conteiner",
+        "divs",
+        "entrarem",
         "essa",
+        "está",
+        "finalizando",
+        "iniciar",
+        "jogadores",
         "jogar",
+        "movê",
         "movimentar",
         "novamente",
         "numdado",
         "numsort",
+        "outros",
+        "partida",
+        "passada",
         "peça",
         "peças",
         "playerid",
         "posição",
+        "será",
+        "socketclient",
         "sorteado",
         "suas",
+        "tabuleiro",
         "texto",
         "tirou",
+        "tomando",
+        "turno",
         "Vamos"
     ]
 }
