commit subindo código pros amiguinhos
bot quando o jogador cai
varias regras de jogo adicionadas pro bom funcionamento

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,20 +3,33 @@
         "ação",
         "Aguardando",
         "andar",
+        "apenas",
+        "atualizada",
+        "automaticamente",
         "casinhas",
+        "chegamos",
         "conectado",
         "conectar",
         "connecteeeedd",
+        "contador",
         "Conteiner",
+        "desconectou",
         "divs",
+        "endedturn",
         "entrarem",
+        "enviando",
+        "enviar",
+        "esperando",
         "essa",
         "está",
         "finalizando",
         "iniciar",
+        "jogador",
         "jogadores",
         "jogar",
+        "jogo",
         "movê",
+        "movida",
         "movimentar",
         "novamente",
         "numdado",
@@ -28,6 +41,10 @@
         "peças",
         "playerid",
         "posição",
+        "potencial",
+        "rifhtbefore",
+        "saiu",
+        "sala",
         "será",
         "socketclient",
         "sorteado",
