quase ultimo dia de trabalho no back pelo menos
jogo pronto. faltando dois detalhes:
 -reta final, só andar com numero de casas exatas;
 -terminar o jogo apenas quando as 4 peças chegarem no fim.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,47 +1,65 @@
 {
     "cSpell.words": [
+        "ACABOOOU",
         "ação",
         "Aguardando",
+        "alguma",
         "andar",
         "apenas",
         "atualizada",
         "automaticamente",
+        "casinha",
         "casinhas",
         "chegamos",
+        "clica",
         "conectado",
         "conectar",
         "connecteeeedd",
         "contador",
         "Conteiner",
+        "decidir",
         "desconectou",
         "divs",
         "endedturn",
+        "então",
         "entrarem",
         "enviando",
         "enviar",
         "esperando",
         "essa",
         "está",
+        "fazer",
         "finalizando",
         "iniciar",
+        "jogada",
         "jogador",
         "jogadores",
+        "jogando",
         "jogar",
         "jogo",
+        "JOOOOGO",
+        "lógica",
+        "mais",
         "movê",
         "movida",
         "movimentar",
         "novamente",
+        "numa",
         "numdado",
         "numsort",
         "outros",
+        "parça",
         "partida",
         "passada",
         "peça",
         "peças",
+        "pelo",
+        "Pìece",
         "playerid",
         "posição",
         "potencial",
+        "reta",
+        "reune",
         "rifhtbefore",
         "saiu",
         "sala",
@@ -51,9 +69,11 @@
         "suas",
         "tabuleiro",
         "texto",
+        "tirar",
         "tirou",
         "tomando",
         "turno",
-        "Vamos"
+        "Vamos",
+        "VENCEEEEEU"
     ]
 }
