Lógica no Back!
Lógica do jogo passada toda pro Back.
Ainda faltando adaptar o bot pra isso e fazer a lógica do finalzinho do jogo.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
         "connecteeeedd",
         "contador",
         "Conteiner",
+        "daqui",
         "decidir",
+        "delas",
         "desconectou",
         "divs",
         "endedturn",
@@ -28,8 +30,10 @@
         "esperando",
         "essa",
         "está",
+        "fazendo",
         "fazer",
         "finalizando",
+        "Hahaha",
         "iniciar",
         "jogada",
         "jogador",
@@ -40,6 +44,8 @@
         "JOOOOGO",
         "lógica",
         "mais",
+        "matar",
+        "matou",
         "movê",
         "movida",
         "movimentar",
@@ -50,6 +56,7 @@
         "outros",
         "parça",
         "partida",
+        "partir",
         "passada",
         "peça",
         "peças",
@@ -58,6 +65,7 @@
         "playerid",
         "posição",
         "potencial",
+        "recebido",
         "reta",
         "reune",
         "rifhtbefore",
@@ -74,6 +82,7 @@
         "tomando",
         "turno",
         "Vamos",
-        "VENCEEEEEU"
+        "VENCEEEEEU",
+        "Você"
     ]
 }
