--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "alguma",
         "andar",
         "apenas",
+        "Aqui",
         "atualizada",
         "automaticamente",
         "casinha",
@@ -21,14 +22,22 @@
         "decidir",
         "delas",
         "desconectou",
+        "disconectou",
         "divs",
+        "Dont",
         "endedturn",
         "então",
+        "entrar",
         "entrarem",
         "enviando",
         "enviar",
+        "escolha",
+        "Escolha",
+        "escolheram",
+        "escolheu",
         "esperando",
         "essa",
+        "essas",
         "está",
         "fazendo",
         "fazer",
@@ -43,17 +52,23 @@
         "jogo",
         "JOOOOGO",
         "lógica",
+        "lugares",
         "mais",
         "matar",
         "matou",
         "movê",
         "movida",
         "movimentar",
+        "nessa",
         "novamente",
         "numa",
         "numdado",
         "numsort",
+        "outra",
+        "Outro",
         "outros",
+        "padrão",
+        "pagina",
         "parça",
         "partida",
         "partir",
@@ -61,21 +76,28 @@
         "peça",
         "peças",
         "pelo",
+        "personagem",
         "Pìece",
         "playerid",
         "posição",
         "potencial",
+        "precisar",
+        "primeiro",
         "recebido",
+        "resposta",
         "reta",
         "reune",
         "rifhtbefore",
         "saiu",
         "sala",
+        "selecionar",
+        "sentar",
         "será",
         "socketclient",
         "sorteado",
         "suas",
         "tabuleiro",
+        "terminou",
         "texto",
         "tirar",
         "tirou",
@@ -83,6 +105,7 @@
         "turno",
         "Vamos",
         "VENCEEEEEU",
+        "VENCEU",
         "Você"
     ]
 }
