resolvendo bugs com time 4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,10 +39,12 @@
         "essa",
         "essas",
         "está",
+        "faltam",
         "fazendo",
         "fazer",
         "finalizando",
         "Hahaha",
+        "igual",
         "iniciar",
         "jogada",
         "jogador",
@@ -56,6 +58,7 @@
         "mais",
         "matar",
         "matou",
+        "menor",
         "movê",
         "movida",
         "movimentar",
@@ -63,6 +66,7 @@
         "novamente",
         "numa",
         "numdado",
+        "número",
         "numsort",
         "outra",
         "Outro",
@@ -97,6 +101,7 @@
         "sorteado",
         "suas",
         "tabuleiro",
+        "terminar",
         "terminou",
         "texto",
         "tirar",
