enviando inicio de teste tokenConnection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,7 @@
         "precisar",
         "primeiro",
         "recebido",
+        "reconectou",
         "resposta",
         "reta",
         "reune",
@@ -93,9 +94,11 @@
         "selecionar",
         "sentar",
         "será",
+        "siuvjerivb",
         "socketclient",
         "sorteado",
         "suas",
+        "sucesso",
         "tabuleiro",
         "terminou",
         "texto",
