--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Aqui",
         "atualizada",
         "automaticamente",
+        "caminho",
         "casinha",
         "casinhas",
         "chegamos",
@@ -29,6 +30,7 @@
         "então",
         "entrar",
         "entrarem",
+        "entregar",
         "enviando",
         "enviar",
         "escolha",
@@ -95,6 +97,7 @@
         "saiu",
         "sala",
         "selecionar",
+        "Selecione",
         "sentar",
         "será",
         "socketclient",
