Mais controle pro Back
O back agr eh qm avisa qual player tem q habilitar o botao de dado pra poder jogar;
Funções turn  e ableDisableDiceBtn, deletadas. -> ações passadas pro back;

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "abledar",
         "ACABOOOU",
         "ação",
         "Aguardando",
@@ -23,6 +24,7 @@
         "decidir",
         "delas",
         "desconectou",
+        "dicebtn",
         "disconectou",
         "divs",
         "Dont",
