--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "movida",
         "movimentar",
         "nessa",
+        "nisso",
         "novamente",
         "numa",
         "numdado",
@@ -82,6 +83,7 @@
         "peça",
         "peças",
         "pelo",
+        "pensar",
         "personagem",
         "Pìece",
         "playerid",
@@ -89,6 +91,7 @@
         "potencial",
         "precisar",
         "primeiro",
+        "recebida",
         "recebido",
         "reconectou",
         "resposta",
