--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,8 +33,10 @@
         "entrar",
         "entrarem",
         "entregar",
+        "Entrou",
         "enviando",
         "enviar",
+        "Erro",
         "escolha",
         "Escolha",
         "escolheram",
@@ -46,6 +48,7 @@
         "faltam",
         "fazendo",
         "fazer",
+        "finaling",
         "finalizando",
         "Hahaha",
         "igual",
@@ -63,6 +66,7 @@
         "matar",
         "matou",
         "menor",
+        "mesmo",
         "movê",
         "movida",
         "movimentar",
@@ -73,6 +77,7 @@
         "numdado",
         "número",
         "numsort",
+        "objeto",
         "outra",
         "Outro",
         "outros",
@@ -90,6 +95,7 @@
         "Pìece",
         "playerid",
         "posição",
+        "posso",
         "potencial",
         "precisar",
         "primeiro",
@@ -122,6 +128,7 @@
         "Vamos",
         "VENCEEEEEU",
         "VENCEU",
+        "vira",
         "Você"
     ]
 }
