melhora na lógica de movimentar peças
corrigido bug q ficava na vez do jogador sem passar quando ele nao tinha peça pra movimentar, sendo q tinha peças na reta final, mas q nao podiam movimentar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "abledar",
         "ACABOOOU",
         "ação",
+        "achou",
         "Aguardando",
         "alguma",
         "andar",
@@ -10,11 +11,13 @@
         "Aqui",
         "atualizada",
         "automaticamente",
+        "autorização",
         "caminho",
         "casinha",
         "casinhas",
         "chegamos",
         "clica",
+        "cliente",
         "conectado",
         "conectar",
         "connecteeeedd",
@@ -67,9 +70,11 @@
         "matou",
         "menor",
         "mesmo",
+        "mexer",
         "movê",
         "movida",
         "movimentar",
+        "movimento",
         "nessa",
         "nisso",
         "novamente",
@@ -89,16 +94,20 @@
         "passada",
         "peça",
         "peças",
+        "pedindo",
         "pelo",
         "pensar",
         "personagem",
         "Pìece",
         "playerid",
+        "pode",
         "posição",
         "posso",
         "potencial",
         "precisar",
         "primeiro",
+        "qualquer",
+        "quantidade",
         "recebida",
         "recebido",
         "reconectou",
@@ -112,6 +121,7 @@
         "Selecione",
         "sentar",
         "será",
+        "setar",
         "siuvjerivb",
         "socketclient",
         "sorteado",
@@ -123,6 +133,7 @@
         "texto",
         "tirar",
         "tirou",
+        "todas",
         "tomando",
         "turno",
         "Vamos",
